syntax = "proto3";


option go_package = "redisproto/";

package redisproto;

message User{
    string Name=1;
    string Surname=2;

}
message ResUser{
    string Name=1;
    string Surname=2;
}
message DeleteUserRes{
    bool isDeleted=1;
    string msg=2;
}
message UserId{
    string id=3;
}
service UserService{
     rpc InsertUser(User) returns (ResUser);
     rpc GetUser(UserId) returns (ResUser);
     rpc DeleteUser(UserId) returns (DeleteUserRes);
}
